--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,21 @@
-# Stage 1: Build
-FROM node:18-alpine as build
+# Stage 1: Build the Angular application
+FROM node:18-alpine AS build
 
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install --legacy-peer-deps
 
 COPY . .
-RUN npm run build -- --configuration production
 
-# Stage 2: Serve
+RUN npm run build
+
+# Stage 2: Serve the application with Nginx
 FROM nginx:alpine
 
 COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
