Fix: Frontend image URL broken path

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
 PORT=5001
+# Database
+# Nếu chạy bằng Docker Compose: mongodb://mongo:27017/phone-store
+# Nếu chạy Local (npm start): mongodb://localhost:27017/phone-store
 MONGODB_URI=mongodb://mongo:27017/phone-store
 JWT_SECRET=your_jwt_secret_here
 SESSION_SECRET=your_session_secret_here
