--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
+# Node modules
 node_modules/
+
+# Database data (CRITICAL: Do NOT commit your database file!)
 database_data/
-backend/node_modules/
-frontend/node_modules/
+dump/
+
+# Environment variables
 .env
-backend/.env
+.env.*
+! .env.example
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor directories
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Build output
+dist/
+build/
+coverage/
+
+# Uploads (User generated content)
+backend/uploads/
