--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,19 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
+    # Gzip Compression
+    gzip on;
+    gzip_min_length 1000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Cache Control for Static Files
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri $uri/ /index.html;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
